--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock Paper Scissors</title>
     <script src="script.js"></script>
 </head>
 <body>
-    
+        This is an RPS web site :]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]
 </body>
 </html>
