--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    This is an RPS web site :]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]
+    <h1>Interactive Javascript things</h1>
+    <div id="container">
+      <div class="content" id="body text">This is the glorious text-content!</div>
+      <button id="button">Click me</button>
+    </div>
+    <script src="script.js"></script>
 </body>
-<script src="script.js"></script>
+<!-- 
+<body>
+    This is an RPS web site :]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]
+    <button>Click me for a response</button>
+</body> -->
 </html>
