--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <h1>Interactive Javascript things</h1>
+    <h1>Virtual RPS</h1>
     <div id="container">
-      <div class="content" id="body text">This is the glorious text-content!</div>
-      <button id="button">Click me</button>
+      <!-- <div class="content" id="body text">This is the glorious text-content!</div> -->
+      <button id="rock">Rock</button>
+      <button id="paper">Paper</button>
+      <button id="scissors">Scissors</button>
     </div>
     <script src="script.js"></script>
 </body>
