added dynamic UI to RPS Site, may add some CSS later

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 <body>
     <h1>Virtual RPS</h1>
     <div id="container">
-      <!-- <div class="content" id="body text">This is the glorious text-content!</div> -->
-      <button id="rock">Rock</button>
-      <button id="paper">Paper</button>
-      <button id="scissors">Scissors</button>
+        <!-- <div class="content" id="body text">This is the glorious text-content!</div> -->
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+        <div id="result"></div>
     </div>
     <script src="script.js"></script>
 </body>
